use flexbox for layout

--- a/index.html
+++ b/index.html
@@ -14,22 +14,24 @@
 
   <body>
     <main>
-      <img src="./images/image-equilibrium.jpg" alt="equilibrium">
-      <h1>Equilibrium #3429</h1>
-      <p>Our Equilibrium collection promotes balance and calm.</p>
-      <div class="stats">
-        <div class="price">
-          <img src="./images/icon-ethereum.svg" alt="icon ethereum">
-          <p>0.041 ETH</p>
+      <div class="card">
+        <img src="./images/image-equilibrium.jpg" alt="equilibrium" class="product-img">
+        <h1 class="product-title">Equilibrium #3429</h1>
+        <p class="product-desc">Our Equilibrium collection promotes balance and calm.</p>
+        <div class="stats">
+          <div class="price">
+            <img src="./images/icon-ethereum.svg" alt="icon ethereum">
+            <p>0.041 ETH</p>
+          </div>
+          <div class="date">
+            <img src="./images/icon-clock.svg" alt="icon clock">
+            <p>Creation of Jules Wyvern</p>
+          </div>
         </div>
-        <div class="date">
-          <img src="./images/icon-clock.svg" alt="icon clock">
+        <div class="creator">
+          <img src="./images/image-avatar.png" alt="image avatar" class="creator-avatar">
           <p>Creation of Jules Wyvern</p>
         </div>
-      </div>
-      <div class="creator">
-        <img src="./images/image-avatar.png" alt="image avatar">
-        <p>Creation of Jules Wyvern</p>
       </div>
     </main>
   </body>
