Apply the Google Font

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
     <main>
       <div class="card">
         <img src="./images/image-equilibrium.jpg" alt="equilibrium" class="product-img">
-        <h1 class="product-title">Equilibrium #3429</h1>
-        <p class="product-desc">Our Equilibrium collection promotes balance and calm.</p>
+        <h1 class="product-title heading">Equilibrium #3429</h1>
+        <p class="product-desc body">Our Equilibrium collection promotes balance and calm.</p>
         <div class="stats">
           <div class="price">
             <img src="./images/icon-ethereum.svg" alt="icon ethereum">
-            <p>0.041 ETH</p>
+            <p class="caption-bold">0.041 ETH</p>
           </div>
           <div class="date">
             <img src="./images/icon-clock.svg" alt="icon clock">
-            <p>Creation of Jules Wyvern</p>
+            <p class="caption">3 days left</p>
           </div>
         </div>
         <div class="creator">
           <img src="./images/image-avatar.png" alt="image avatar" class="creator-avatar">
-          <p>Creation of Jules Wyvern</p>
+          <p class="caption">Creation of <span>Jules Wyvern</span></p>
         </div>
       </div>
     </main>
