add hover effect

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <main>
       <div class="card">
-        <img src="./images/image-equilibrium.jpg" alt="equilibrium" class="product-img">
+        <div class="product-img"></div>
         <h1 class="product-title heading">Equilibrium #3429</h1>
         <p class="product-desc body">Our Equilibrium collection promotes balance and calm.</p>
         <div class="stats">
